# iio-sensor-proxy

./: .gitlab-ci.yml  NEWS  README.md  RELEASE.md  meson.build  meson_options.txt
data/: 80-iio-sensor-proxy.rules  iio-sensor-proxy.service.in  meson.build  net.hadess.SensorProxy.conf.in
debian/: changelog  control  iio-sensor-proxy.maintscript  iio-sensor-proxy.postinst  lintian-overrides  rules  salsa-ci.yml  watch
debian/tests/: control
src/: drivers.h  drv-fake-compass.c  drv-fake-light.c  drv-iio-buffer-accel.c  drv-iio-buffer-compass.c  drv-iio-buffer-light.c  drv-iio-poll-accel.c  drv-iio-poll-light.c  drv-iio-poll-proximity.c  drv-input-accel.c  drv-input-proximity.c  drv-ssc-accel.c  drv-ssc-compass.c  drv-ssc-light.c  drv-ssc-proximity.c  iio-buffer-utils.c  iio-buffer-utils.h  iio-sensor-proxy.c  meson.build  monitor-sensor.c  orientation.c  orientation.h  test-mount-matrix.c
tests/: integration-test.py  meson.build  ssc-test.py
tests/input-proximity-data/: device  ioctl
